--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@worldcoin/minikit-js": "^1.7.1",
     "bufferutil": "^4.0.9",
-    "next": "13.4.0",
+    "next": "^15.2.2",
     "next-translate": "^2.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
