--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
   },
   "dependencies": {
     "@worldcoin/minikit-js": "^1.7.1",
+    "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.479.0",
     "next": "^13.4.0",
-    "next-translate": "^1.0.0",
+    "next-translate": "^1.6.0",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.10"
   }
 }
